# playwright-rs

./: .gitignore  Cargo.toml  devenv.nix  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/playwright_cli/: Cargo.toml
crates/playwright_core/: Cargo.toml  build.rs
crates/playwright_core/src/: api.rs  imp.rs  lib.rs  main.rs
crates/playwright_core/src/api/: accessibility.rs  browser.rs  browser_context.rs  browser_type.rs  console_message.rs  dialog.rs  download.rs  element_handle.rs  file_chooser.rs  frame.rs  generated.rs  input_device.rs  js_handle.rs  page.rs  playwright.rs  request.rs  response.rs  route.rs  selectors.rs  video.rs  websocket.rs  worker.rs
crates/playwright_core/src/imp/: artifact.rs  binding_call.rs  browser.rs  browser_context.rs  browser_type.rs  console_message.rs  dialog.rs  download.rs  element_handle.rs  file_hooser.rs  frame.rs  js_handle.rs  page.rs  playwright.rs  request.rs  response.rs  route.rs  selectors.rs  stream.rs  utils.rs  video.rs  websocket.rs  worker.rs
crates/playwright_core/src/imp/core/: connection.rs  driver.rs  event_emitter.rs  message.rs  remote_object.rs  transport.rs
crates/playwright_core/src/imp/core/message/: de.rs  ser.rs
crates/playwright_core/src/protocol/: generated.rs  protocol.yml
crates/playwright_core/tests/: hello.rs  test.rs
crates/playwright_core/tests/browser/: mod.rs
crates/playwright_core/tests/browser_context/: mod.rs
crates/playwright_core/tests/browser_type/: mod.rs
crates/playwright_core/tests/connect/: mod.rs
crates/playwright_core/tests/devices/: mod.rs
crates/playwright_core/tests/page/: mod.rs
crates/playwright_core/tests/selectors/: mod.rs
crates/playwright_core/tests/server/: worker.js
crates/playwright_test/: Cargo.toml  readme.md
crates/scripts/: Cargo.toml
crates/scripts/src/: api.rs  diff.rs  generate_api.rs  generate_protocol.rs  protocol.rs  utils.rs
crates/scripts/src/api/: types.rs
docs/: book.toml
docs/src/: readme.md  summary.md
