[package]
name = "playwright_core"
version = "0.0.20"
authors = ["octaltree <octaltree@gmail.com>"]
description = "Playwright port to Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/playwright_core/"
repository = "https://github.com/ifiokjr/playwright-rs"
categories = ["web-programming", "development-tools::testing", "wasm"]
keywords = ["testing", "headless", "web", "browser", "automation"]
edition = "2018"
build = "src/build.rs"

[build-dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
thiserror = "1"
strong = { version = "0.3.4", features = ["serde", "shorthand"] }
tokio = { version = "1.9.0", features = ["sync", "rt-multi-thread", "macros"] }
actix-rt = { version = "2.2.0", optional = true }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
dirs = "4"
paste = "1"
base64 = "0.21"
itertools = "0.10.1"
chrono = { version = "0.4.19", optional = true, features = ["serde"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
futures = "0.3"
serde_with = { version = "2", default-features = false, features = ["macros"] }

[dev-dependencies]
env_logger = "0.10"
tempdir = "0.3"
tide = "0.16"
warp = "0.3"

[features]
default = ["chrono", "rt-tokio"]
rt-tokio = []
rt-actix = ["actix-rt"]
rt-async-std = ["async-std"]
only-for-docs-rs = []

[package.metadata.docs.rs]
features = ["only-for-docs-rs"]
