[workspace]
members = ["crates/*"]
default_members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = ["web-programming", "development-tools::testing", "wasm"]
edition = "2021"
homepage = "https://github.com/ifiokjr/playwright-rs"
license = "Unlicense OR Apache-2.0"
repository = "https://github.com/ifiokjr/playwright-rs"
rust-version = "1.66.0"
version = "0.0.0"

[workspace.dependencies]
actix-rt = "2.2.0"
anyhow = "1"
async-std = "1"
base64 = "0.21"
case = "1"
chrono = "0.4.19"
dirs = "4"
env_logger = "0.10"
futures = "0.3"
itertools = "0.10"
log = "0.4"
paste = "1"
proc-macro2 = "1"
quote = "1"
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_with = "2"
serde_yaml = "0.9"
strong = "0.3"
tempdir = "0.3"
thiserror = "1"
tide = "0.16"
tokio = "1"
tokio-stream = "0.1"
warp = "0.3"
zip = "0.6"

# Internal dependencies
playwright_core = { path = "crates/playwright_core", version = "0.0.0" }
