[package]
name = "playwright_test"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/playwright_test"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["testing", "headless", "web", "browser", "automation"]
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Test utilities for playwright-rs"

[dependencies]
playwright_core = { workspace = true }
