[package]
name = "scripts"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
case = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[[bin]]
name = "generate_api"
path = "src/generate_api.rs"

[[bin]]
name = "generate_protocol"
path = "src/generate_protocol.rs"

[[bin]]
name = "diff"
path = "src/diff.rs"
